<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/contenedorTipoVehiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tipo_vehiculo" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tipoCarro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_carro" />

            <RadioButton
                android:id="@+id/tipoMoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_moto" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedorPlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contenedorTipoVehiculo"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_placa" />

        <EditText
            android:id="@+id/placa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"
            android:hint="@string/et_placa_oculta"
            android:inputType="text"
            android:maxLength="10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedorCilindraje"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_below="@id/contenedorPlaca"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_cilindraje" />

        <EditText
            android:id="@+id/cilindraje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_cilindraje_oculto"
            android:inputType="number"
            android:maxLength="10"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contenedorCilindraje"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar" />

        <Button
            android:id="@+id/btn_agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_agregar" />
    </LinearLayout>

</RelativeLayout>